--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,19 @@
-.container {
-  margin: 0 auto;
-  width: 100%;
-  padding: 20px;
+.app {
+  margin-top: 30px;
 }
 
-.card__container {
+.moviesCardWrapper {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: flex-start;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: center;
   text-align: center;
+  margin: 10px;
 }
 
 @media (max-width: 768px) {
-  .card__container {
+  .moviesCardWrapper {
     justify-content: center;
     align-items: center;
   }
